tests/codegen/errors/reader/quote-feature-postfix/atom.reader.error.reader.feature.missing.name/reader-feature-missing-name.mon
;; TEST-ID: tests.codegen.reader-error.reader-feature-missing-name
;; TEST-TIER: regression
;; TEST-STATUS: passing-baseline-2026-06-15
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SUBSET: reader-errors/quote-feature-postfix
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.reader-error-coverage
;; TEST-PURPOSE: Trigger and pin diagnostic: Expected feature name after #+
;; TEST-ATOM: atom.reader.error.reader.feature.missing.name
;; TEST-CODEGEN-ATOM: atom.reader.error.reader.feature.missing.name
;; TEST-QUALITY: diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-READER-ERROR: Expected feature name after #+
;; TEST-READER-PATH: reader.c:7268 parser.feature
;; TEST-CODEGEN-PATH: diagnostic.parser.feature
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: reader
;; TEST-COVERAGE: reader.c:7268 Expected feature name after #+
;; TEST-USES-ATOM: atom.reader.error.reader.feature.missing.name
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-USES-ATOM: atom.reader.error
;; TEST-USES-ATOM: atom.reader.error.family.parser.feature
;; TEST-REFINES: atom.codegen.category.90.diagnostics
;; TEST-REFINES: atom.reader.error
;; TEST-MENU: errors/reader/quote-feature-postfix/atom.reader.error.reader.feature.missing.name
;; TEST-MENU-PATH: codegen/errors/reader/quote-feature-postfix/atom.reader.error.reader.feature.missing.name
;; TEST-ATOM-LEAF: atom.reader.error.reader.feature.missing.name
;; TEST-CLI-TARGET: codegen errors reader quote-feature-postfix

(module Main)
#+
(show 1)
#---
